--- a/package.json
+++ b/package.json
@@ -11,47 +11,78 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onView:vscodeKoverage"
+		"onView:koverage"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
-		"commands": [
-		  {
-			"command": "vscodeKoverage.refresh",
-			"title": "Refresh",
-			"icon": {
-				"dark": "resources/dark/refresh.svg",
-				"light": "resources/light/refresh.svg"
+		"configuration": {
+			"title": "koverage",
+			"properties": {
+				"koverage.coverageFileNames": {
+					"type": "array",
+					"default": [
+						"lcov.info",
+						"cov.xml",
+						"coverage.xml",
+						"jacoco.xml"
+					],
+					"description": "coverage file names for the extension to automatically look for"
+				},
+				"koverage.coverageFilePaths": {
+					"type": "array",
+					"default": [
+						"coverage"
+					],
+					"description": "coverage file paths for the extensions to automatically search in"
+				},
+				"koverage.lowCoverageThreshold": {
+					"type": "number",
+					"default": 50,
+					"description": "coverage threshold considered too low"
+				},
+				"koverage.sufficientCoverageThreshold": {
+					"type": "number",
+					"default": 70,
+					"description": "coverage threshold considered sufficient"
+				}
 			}
-		  },
-		  {
-			"command": "vscodeKoverage.openFile",
-			"title": "Open"
-		  }
+		},
+		"commands": [
+			{
+				"command": "koverage.refresh",
+				"title": "Refresh",
+				"icon": {
+					"dark": "resources/dark/refresh.svg",
+					"light": "resources/light/refresh.svg"
+				}
+			},
+			{
+				"command": "koverage.openFile",
+				"title": "Open"
+			}
 		],
 		"views": {
 			"test": [
 				{
-					"id": "vscodeKoverage",
+					"id": "koverage",
 					"name": "Koverage"
 				}
 			]
 		},
 		"menus": {
-		  "view/title": [
-			{
-			  "command": "vscodeKoverage.refresh",
-			  "when": "view == vscodeKoverage",
-			  "group": "navigation"
-			}
-		  ],
-		  "view/item/context": [
-			{
-			  "command": "vscodeKoverage.openFile",
-			  "when": "view == vscodeKoverage && viewItem == fileCoverage",
-			  "group": "inline"
-			}
-		  ]
+			"view/title": [
+				{
+					"command": "koverage.refresh",
+					"when": "view == koverage",
+					"group": "navigation"
+				}
+			],
+			"view/item/context": [
+				{
+					"command": "koverage.openFile",
+					"when": "view == koverage"
+				}
+			]
 		}
 	},
 	"scripts": {
@@ -63,22 +94,21 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.44.0",
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
-		"eslint": "^6.8.0",
-		"@typescript-eslint/parser": "^2.26.0",
+		"@types/vscode": "^1.44.0",
 		"@typescript-eslint/eslint-plugin": "^2.26.0",
-		"glob": "^7.1.6",
+		"@typescript-eslint/parser": "^2.26.0",
+		"eslint": "^6.8.0",
 		"mocha": "^7.1.1",
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
 	},
 	"dependencies": {
 		"@cvrg-report/clover-json": "0.3.0",
+		"@reactivex/rxjs": "^6.5.5",
 		"cobertura-parse": "github:vokal/cobertura-parse#53109a6",
-		"glob": "7.1.4",
 		"jacoco-parse": "2.0.1",
 		"lcov-parse": "1.0.0"
 	}
