--- a/package.json
+++ b/package.json
@@ -103,15 +103,18 @@
 		"@typescript-eslint/parser": "^2.26.0",
 		"eslint": "^6.8.0",
 		"mocha": "^7.1.1",
+		"ts-loader": "^7.0.1",
 		"typescript": "^3.8.3",
-		"vscode-test": "^1.3.0"
+		"vscode-test": "^1.3.0",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.11"
 	},
 	"dependencies": {
-		"@cvrg-report/clover-json": "0.3.0",
-		"@reactivex/rxjs": "^6.5.5",
+		"@cvrg-report/clover-json": "^0.3.0",
 		"@vscode-logging/logger": "^1.0.0",
 		"cobertura-parse": "github:vokal/cobertura-parse#53109a6",
 		"jacoco-parse": "2.0.1",
-		"lcov-parse": "1.0.0"
+		"lcov-parse": "1.0.0",
+		"rxjs": "^6.5.5"
 	}
 }
