--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "moduleResolution": "node"
 	},
 	"exclude": [
 		"node_modules",
