Bundle the extension using webpack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-        "strictNullChecks": true,
-        "moduleResolution": "node"
+        "strictNullChecks": true
 	},
 	"exclude": [
 		"node_modules",
