--- a/.vscodeignore
+++ b/.vscodeignore
@@ -6,5 +6,19 @@ src/**
 vsc-extension-quickstart.md
 **/tsconfig.json
 **/.eslintrc.json
+**/tslint.json
 **/*.map
 **/*.ts
+
+# Extra file to ignore
+webpack.config.json
+tsconfig.json
+.github/
+azure-pipelines.yml
+.azure-pipelines/
+node_modules/**/test/**
+node_modules
+src/
+out/
+out-cov/
+coverage/
