--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
 	"name": "vscode-koverage",
 	"publisher": "tenninebt",
 	"displayName": "Koverage",
-	"keywords": ["coverage", "lcov", "jacoco"],
+	"keywords": [
+		"coverage",
+		"lcov",
+		"jacoco"
+	],
 	"repository": "https://github.com/tenninebt/vscode-koverage",
 	"description": "View the code coverage per folder/file in the test view",
 	"version": "0.0.4-dev",
@@ -18,7 +22,7 @@
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
-		"configuration": {	
+		"configuration": {
 			"title": "koverage",
 			"properties": {
 				"koverage.coverageFileNames": {
@@ -106,12 +110,12 @@
 		"ts-loader": "^7.0.1",
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0",
-		"webpack": "^4.43.0",
+		"webpack": "^4.46.0",
 		"webpack-cli": "^3.3.11"
 	},
 	"dependencies": {
 		"@cvrg-report/clover-json": "^0.3.0",
-		"@vscode-logging/logger": "^1.0.0",
+		"@vscode-logging/logger": "^1.2.2",
 		"cobertura-parse": "github:vokal/cobertura-parse#53109a6",
 		"jacoco-parse": "2.0.1",
 		"lcov-parse": "1.0.0",
