--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	],
 	"repository": "https://github.com/tenninebt/vscode-koverage",
 	"description": "View the code coverage per folder/file in the test view",
-	"version": "0.0.5-beta",
+	"version": "0.0.6",
 	"engines": {
 		"vscode": "^1.44.0"
 	},
