--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
 			"outFiles": [
 				"${workspaceFolder}/dist/**/*.js"
 			],
-			"preLaunchTask": "npm: webpack"
+			"preLaunchTask": "npm: build:dev"
 		},
 		{
 			"name": "Extension Tests",
@@ -28,7 +28,7 @@
 			  "--extensionTestsPath=${workspaceFolder}/out/test"
 			],
 			"outFiles": ["${workspaceFolder}/out/test/**/*.js"],
-			"preLaunchTask": "npm: test-compile"
+			"preLaunchTask": "npm: test:compile"
 		}		
 	]
 }
