--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
+		"@types/lcov-parse": "^1.0.0",
 		"@types/node": "^13.11.0",
 		"@types/vscode": "^1.44.0",
 		"@typescript-eslint/eslint-plugin": "^2.26.0",
@@ -116,13 +117,12 @@
 		"webpack-cli": "^4.10.0"
 	},
 	"dependencies": {
-		"@vscode-logging/logger": "^1.2.3",
 		"@cvrg-report/clover-json": "^0.3.0",
 		"@cvrg-report/cobertura-json": "^0.1.3",
 		"@cvrg-report/jacoco-json": "^0.1.2",
+		"@vscode-logging/logger": "^1.2.3",
 		"lcov-parse": "1.0.0",
 		"rxjs": "^6.5.5"
 	},
-	"overrides": {
-	}
+	"overrides": {}
 }
