--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "repository": "https://github.com/tenninebt/vscode-koverage",
   "description": "View the code coverage per folder/file in the test view",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "engines": {
     "vscode": "^1.76.0"
   },
@@ -121,12 +121,11 @@
     }
   },
   "scripts": {
-    "lint": "eslint ./src",
     "build:prod": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "build:watch": "webpack --mode development --watch",
     "compile": "swc .",
-    "test:compile": "tsc -p ./"
+    "lint": "eslint ./src"
   },
   "devDependencies": {
     "@swc/core": "^1.3.46",
@@ -134,12 +133,15 @@
     "@types/node": "^18.15.11",
     "@types/vscode": "^1.76.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@vscode/vsce": "^2.18.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "ovsx": "^0.8.0",
+    "swc": "^1.0.11",
     "swc-loader": "^0.2.3",
     "typescript": "^5.0.3",
     "vscode-test": "^1.3.0",
