--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,11 @@ jobs:
         with:
           node-version: 18
       - name: "Install dependencies"
-        run: |
-          npm install
-          npm install -g vsce
-          npm install -g ovsx
+        run: 
+          npm install -g yarn
+          yarn install
+          yarn install -g vsce
+          yarn install -g ovsx
       - name: "Read Package.json"
         id: read_packageJson
         run: |
